UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Vision_DRL_Sales_External_Summary__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Updated_Date__c</fullName>
        <label>GCP Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>DRL Sales External Summary</relationshipLabel>
        <relationshipName>DRL_Sales_External_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Desc__c</fullName>
        <label>Customer Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DRL Sales External Summary</relationshipLabel>
        <relationshipName>DRL_Sales_External_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Cutomer_Hierarchy_Code__c</fullName>
        <label>Cutomer Hierarchy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_DIVISION_DESC__c</fullName>
        <label>DIVISION_DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>Visiion unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_PFamily__c</fullName>
        <label>PFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Processed_Date__c</fullName>
        <formula>IF(AND(ISNULL(Vision_month__c) ,ISNULL(Vision_year__c)),null,DATE( VALUE(Vision_year__c) ,IF(LEN(Vision_month__c)== 2,VALUE(Vision_month__c),VALUE(&apos;0&apos;+Vision_month__c)) ,01))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Processed_Month__c</fullName>
        <label>Cal Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>DRL Sales External Summary</relationshipLabel>
        <relationshipName>DRL_Sales_External_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales__c</fullName>
        <label>Sales Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Units__c</fullName>
        <label>QTY Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_agreement_no__c</fullName>
        <label>Agreement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_customer_code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_direct_qty__c</fullName>
        <label>Direct QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_indirect_qty__c</fullName>
        <label>Indirect QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_net_sales__c</fullName>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_price_agreement_desc__c</fullName>
        <label>Price Agreement Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_sales_direct__c</fullName>
        <label>Sales Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_sales_indirect__c</fullName>
        <label>Sales Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DRL Sales External Summary</label>
    <nameField>
        <displayFormat>drl-ext-summ-{0000000}</displayFormat>
        <label>DRL Sales External Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRL Sales External Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>